[package]
name = "pastry"
version = "0.1.0"
edition = "2021"
authors = ["aeolyus"]
description = "A sweet command line tool to interact with a variety pastebin backends."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive", "wrap_help"] }
clap_complete = "4.3.1"
reqwest = { version = "0.11.17", features = ["blocking", "multipart", "json"] }
serde = { version = "1.0.162", features = ["serde_derive"] }
serde_json = "1.0.96"
